--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,8 +28,13 @@ end
 target 'ahuaAppTesting' do
   config = use_native_modules!
 
+  flags = get_default_flags()
+  
   use_react_native!(
     :path => config[:reactNativePath],
+      # Hermes is now enabled by default. Disable by setting this flag to false.
+      :hermes_enabled => flags[:hermes_enabled],
+      :fabric_enabled => flags[:fabric_enabled],
     # Enables Flipper.
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
