--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "cleanup": "rm -rf node_modules && yarn cache clean --force && watchman watch-del-all"
   },
   "dependencies": {
-    "@yaradigitallabs/ahua-react-native": "^1.21.0",
+    "@yaradigitallabs/ahua-react-native": "^1.22.0",
     "react": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-svg": "^13.14.0",
-    "react-native-svg-transformer": "1.0.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "6.1.2",
-    "react-native-safe-area-view": "^1.1.1"
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-svg": "^14.1.0",
+    "react-native-svg-transformer": "1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -37,7 +39,7 @@
     "typescript": "5.0.4"
   },
   "resolutions": {
-    "react-native-svg": "^13.14.0" 
+    "react-native-svg": "^13.14.0"
   },
   "engines": {
     "node": ">=18"
